--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "classnames": "^2.3.1",
     "hookrouter": "^1.2.3",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react-dom": "^16.8.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
