--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@types/classnames": "^2.3.1",
     "classnames": "^2.3.1",
-    "hookrouter": "^1.2.3",
+    "hookrouter": "1.2.3",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "url": "^0.11.0"
