--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "repository": "https://github.com/KseniyaT/PokemonDesk",
   "license": "MIT",
   "dependencies": {
+    "@hapi/hapi": "^20.1.3",
+    "@hapi/inert": "^6.0.3",
     "@types/classnames": "^2.3.1",
     "classnames": "^2.3.1",
+    "handlebars": "^4.7.7",
     "hookrouter": "1.2.3",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
@@ -55,7 +58,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "husky": {
     "hooks": {
